# ros2_yolov8_bytetrack

./: CMakeLists.txt  README.md  package.xml  ros2_yolov8.txt
config/: tracker_params.yaml
launch/: launch.py
src/: yolov8_track_node.cpp  yolov8_video_track.cpp
src/bytetrack/: BYTETracker.cpp  STrack.cpp  STrack.h
src/engine/: rknn_engine.cpp
src/process/: postprocess.cpp  preprocess.cpp
src/rkmedia/utils/: mpp_decoder.cpp  mpp_encoder.cpp
src/task/: yolov8.cpp  yolov8.h
